--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="app" class="min-h-screen bg-slate-200"></div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
