--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="@../../photos/IMG_0610.PNG" />
+    <link
+      rel="icon"
+      href="https://raw.githubusercontent.com/victorv47/SF-Elementary-Directory/main/photos/IMG_0610.PNG"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sam Fisher Elementary School</title>
   </head>
